--- a/results/all/ideology_gender_and_language.Rmd
+++ b/results/all/ideology_gender_and_language.Rmd
@@ -18,6 +18,9 @@ output:
 The code and information contained herein constitutes the complete write-up of the experiments I carried out for my first Qualifying Paper towards the PhD in Linguistics at Stanford University. The goal is to make this document both a dumping ground for my ideas while it is in progress, as well as, eventually, a publicly-available version of my Qualifying Paper, in the spirit of Open Science.
 
 ## Preliminaries 
+
+### Setting up the Notebook
+
 For this write-up and analysis, I require the following packages, loaded in here:
 
 ```{r echo=TRUE}
@@ -29,13 +32,57 @@ library(languageR)
 library(lmerTest)
 library(reshape2)
 library(grid)
+
+source("helpers.R")
 ```
 
 I also use a custom color palette, so I include the code for that here as well^[It is my hope and intention that this color palette be color-blind friendly. If you have accessibility concerns, please do not hesitate to reach out to me!].
 
 ```{r}
 bran_palette = c("#7ae7e5", "#fe5f55", "#B2A6DE", "#14342b", "#69385c")
+
+theme_set(theme_minimal())
 ```
+
+### Frequency Data
+
+We also need the frequency data!
+
+```{r}
+frequency <- read.csv("freq_vals.csv")
+```
+
+```{r}
+lib_cols <- c('ABC','CNN','PBS','NBC','MSNBC','NPR','CBS')
+```
+
+```{r}
+frequency <- frequency %>%
+  mutate(total_left = rowSums(frequency[lib_cols])) %>%
+  mutate(total_right = FOX) %>%
+  mutate(left_wpm = (total_left/109300000) * 1000000) %>%
+  mutate(right_wpm = (total_right/12200000) * 1000000) %>%
+  mutate(neutral_binary = ifelse(gender=="neutral",1,0)) %>%
+  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption'))
+```
+
+```{r}
+frequency_grouped <- frequency %>%
+  filter(morph_type=="compound") %>%
+  group_by(lexeme,neutral_binary) %>%
+  summarise(mean_freq_left = mean(left_wpm), mean_freq_right = mean(right_wpm)) 
+```
+
+```{r}
+write.csv(frequency_grouped, "freq_prep.csv")
+```
+
+```{r}
+lex_freqs <- read.csv("freq_preped.csv") %>%
+  mutate(left_surprisal = (-log(mean_left_neutral))/(-log(mean_left_gendered))) %>%
+  mutate(right_surprisal = (-log(mean_right_neutral))/(-log(mean_right_gendered)))
+```
+
 
 # Experiments 
 
@@ -122,11 +169,593 @@ ggplot(norming_means, aes(x=id, y=indi_mean, color=gender)) +
   coord_cartesian(clip = "off")
 ```
 
-
 ## Self-Paced Reading Study
+
+### Methods
+
+**Participants**
+
+We originally ran the experiment on 200 participants, recruited through the online participant recruitment platform <a href="https://www.prolific.co">Prolific</a>. The mean time of the experiment was 5.39 minutes, and participants were paid $1.75 for their participation^[This amounts to an hourly rate of \$20.73. We originally anticipated that participants would take an average of 7 minutes to complete the experiment, and set the base pay at \$15 an hour.]. The only restrictions placed on participants were that they:
+
+<ol>
+  <li>Were born in the United States</li>
+  <li>Lived in the United States at the time of participation</li>
+  <li>Spoke English as a first language</li>
+  <li>Had not participated in the norming study for the stimuli</li>
+</ol>
+
+These requirements were implemented in order to assure that speakers came from at least somewhat similar linguistic backgrounds, as certain lexical items in the study (such as <i>congressperson</i>) are quite localized to the United States.
+
+After this initial run of the experiment, we found that there was a dearth of conservative or Republican-aligned participants. As a result, we ran the experiment again, this time on 98 self-identified Republicans. This was achieved by adding a filter on Prolific so that only Republican-identified individuals could see the task. The rest of the experiment, including payment, was exactly the same, except that an additional disclaimer that participants could not use the FireFox browser experiment, after the first run revealed an incompatibility between JavaScript and FireFox. The two runs of the experiment amounted in a total of 298 participants who completed the task.
+
+### Analysis
+
+**Reading in the Data**
+
+```{r}
+sprt_data <- read.csv('sprt_data.csv') %>%
+  filter(trial_id!= 'example') %>%
+  filter(region=='critical')
+```
+
+**Exclusions** 
+
+Now, we want to exclude any participants who failed to answer at least 85% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 85% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
+
+```{r}
+sprt_exclusion <- sprt_data %>% group_by(workerid) %>%
+  summarise(accuracy = mean(response_correct)) %>%
+  mutate(exclude = ifelse(accuracy < 0.85,'Yes','No')) %>% 
+  filter(exclude == 'Yes')
+
+sprt_data <- sprt_data[!(sprt_data$workerid %in% sprt_exclusion$workerid),]
+```
+
+We all want to filter out all trials in which the reading time for the critical item was more than 2.5 standard deviations from the mean reading time on that lexical item across all participants. 
+
+```{r}
+sprt_data <- sprt_data %>%
+  group_by(trial_id) %>%
+  mutate(id_mean = mean(log(rt))) %>%
+  mutate(exclusion = (log(rt) < mean(log(rt)) - 2*sd(log(rt))|(log(rt) > mean(log(rt)) + 2*sd(log(rt))))) %>%
+  ungroup() %>%
+  filter(exclusion==FALSE)
+```
+
+This results in 238 trials being removed from the 5580 we got after the by-participant exclusions. We now have 5342 trials we can use for analysis.
+
+**Additional Information**
+Now that we have only the rows we want, let's add some new columns, which will contain important information for each data point. Here, we will be adding:
+
+- Gender Ideology Subscores
+- Trial Genders
+- Trial Morphology Types
+- Critical Item Length & Length-Controlled Residuals
+- Trial Congruency 
+- Partipant Political Affiliation
+
+Ideally, I would've added all of these but the first when I actually created the stimuli and logged responses, but I forgot to! Luckily, R allows us to do this post-hoc fairly straightforwardly... which is good, since these features will be critical in our data visualization and analysis.<br>
+<br>
+
+<br>
+The question under investigation here is whether or not individuals' conceptions of gender affect how they process  gendered and gender-neutral forms of English personal and professional titles. <br>
+<br>
+In order to examine this, we need to quanify participants' ideological views! Here we have adopted the 13-item Social Roles Questionnaire put forth in Baber & Tucker (2006). Questions 1-5 correlate to the <i>'Gender Transcendent'</i> subscale, and questions 6-13 correspond to the <i>'Gender Linked'</i> subscale. Each item is scored on a scale of 0-100. So, the first thing we want to do is make two lists of columns which correspond to these two subscales, since the questions are stored individually in the data:
+
+```{r}
+gender_transcendence_cols <- c('subject_information.gender_q1','subject_information.gender_q2','subject_information.gender_q3','subject_information.gender_q4','subject_information.gender_q5')
+
+gender_linked_cols <- c('subject_information.gender_q6','subject_information.gender_q7','subject_information.gender_q8','subject_information.gender_q9','subject_information.gender_q10','subject_information.gender_q11','subject_information.gender_q12','subject_information.gender_q13')
+```
+<br>
+Now we can use the mutate() method on <b>sprt_data</b> to add two new columns, one for each subscale. We tell R to take the means of the specified columns in [column_names] of <b>sprt_data</b> for each individual row: rowMeans(sprt_data[column_names]). We also have to subtract this mean from 100 in the case of the <i>'Gender Transcendent'</i> subscale, since it is inversely scored. Finally, we can create an average total score regardless of subscores, simply by meaning the two subscores we already have.
+
+```{r}
+sprt_data <- sprt_data %>%
+  mutate(gender_trans = 100 - (rowMeans(sprt_data[gender_transcendence_cols]))) %>%
+  mutate(gender_link = rowMeans(sprt_data[gender_linked_cols])) 
+
+gender_all = c('gender_trans','gender_link')
+
+sprt_data <- sprt_data %>%
+  mutate(gender_total = rowMeans(sprt_data[gender_all]))
+```
+
+<br>
+We also want to add whether the trial included a female or male referent (but also, like, destroy the binary!). In order to do this, we'll just add a <b>trial_gender</b> column that says <i>'female'</i> if the condition was either <i>'neutral_female'</i> or <i>'congruent_female'</i>. Otherwise, we want the <b>trial_gender</b> to say <i>'male'</i>.
+
+```{r}
+sprt_data <- sprt_data %>%
+  mutate(trial_gender = ifelse(condition=='neutral_female' | condition == 'congruent_female','female','male'))
+
+sprt_data %>%
+  select(workerid,rt,condition,trial_id,trial_gender)
+```
+
+<br>
+Now we want to add whether or not the lexeme's neutral form is developed by compounding (as in <i>'congress-person'</i>) or by the adoption of the male form (as in <i>'actor'</i> being used more for both men and women). In this study, we only have six lexemes of the latter type, so we'll just tell R to assign those a <b>morph_type</b> value of <i>'adoption'</i> (for 'male adoption'), and all else will be assigned a value of <i>'compound'</i>.
+
+```{r}
+sprt_data <- sprt_data%>%
+  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption'))
+
+sprt_data %>%
+  select(rt,lexeme,morph_type)
+```
+
+
+<br>
+Another important factor we want to explore is the length of the critical item! In order to add this, we simply create a new column <b>form_length</b> and tell R to input as that column's value the length of the string that appears in that row's <b>form</b> column, which corresponds to the orthograpic form of the critical item in that trial. <i>Note that this will include spaces in the count!</i>
+
+```{r}
+sprt_data <- sprt_data %>%
+  mutate(form_length = str_length(form))
+
+sprt_residual_model <- lm(log(rt)~form_length, data = sprt_data)
+
+sprt_data <- sprt_data %>%
+  mutate(resid_rt = resid(sprt_residual_model))
+```
+
+Now that we have these, we can run a simple linear regression which will show us the effect of orthographic length on reading time. Then we add a new column in the data which is the residual reading time, or the reading time in log space AFTER we control for the effects of orthographic length.
+
+<br>
+We also want to make sure we have a column which records whether or not the trial was gender-congruent (as in <i>'Shelby is a congresswoman'</i>) or gender neutral (as in <i>'Shelby is a congressperson'</i>). We add a <b>trial_congruency</b> column, which is valued as <i>'congruent'</i> if that row's condition is one of the two congruent conditions. Otherwise, it gets valued as <i>'neutral'</i>.
+
+```{r}
+sprt_data <- sprt_data %>%
+  mutate(trial_congruency = ifelse(condition=='congruent_male' | condition == 'congruent_female','congruent','neutral'))
+```
+
+<br>
+Finally, we can classify participants by their particular political alignment; we can construe this broadly as "Republicans" vs. "Democrats", with those who declined to state a preference, or placed themselves in the middle, as "Non-Partisan".
+
+```{r}
+sprt_data <- sprt_data %>%
+  mutate(poli_party = ifelse(subject_information.party_alignment == 1 | subject_information.party_alignment == 2,'Republican',ifelse(subject_information.party_alignment == 4 | subject_information.party_alignment == 5,'Democrat','Non-Partisan')))
+```
+
+**Speaker Means** 
+
+```{r}
+sprt_speaker_means <- sprt_data %>%
+  group_by(condition,poli_party,workerid) %>%
+  summarize(MeanRT=mean(resid_rt))
+```
+
+```{r}
+sprt_data %>%
+  group_by(condition,trial_gender) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender)) + 
+  geom_point(size=3) + 
+  geom_jitter(data = sprt_speaker_means, aes(y=MeanRT),alpha=.1,color='black') + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  scale_color_manual(values = bran_palette, )
+```
+
+```{r}
+sprt_whole_means <- sprt_data %>%
+  group_by(trial_gender,trial_congruency) %>%
+  summarize(MeanRT = mean(rt), CI.Low = ci.low(rt), CI.High = ci.high(rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High)
+
+dodge = position_dodge(.9)
+ggplot(data=sprt_whole_means, aes(x=trial_gender,y=MeanRT,fill=trial_congruency)) + 
+  geom_bar(stat='identity',position=dodge) + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax),width=.25,position=dodge) + 
+  scale_fill_manual(values = bran_palette)
+```
+
+**Reading Time by Gender Ideology**
+
+```{r}
+sprt_speaker_means_ideology <- sprt_data %>%
+  group_by(gender_link,workerid,trial_gender,trial_congruency,poli_party) %>%
+  summarise(meanrt = mean(resid_rt))
+```
+
+
+```{r}
+sprt_speaker_means_ideology %>%
+  ggplot(aes(x=gender_link,y=meanrt,color=trial_gender,linetype=trial_congruency)) + 
+  geom_point() + 
+  geom_smooth(method='lm') + 
+  scale_color_manual(values = bran_palette, ) + 
+  facet_wrap(~poli_party)
+```
+
+**Reading Time on Neologisms** 
+
+```{r}
+sprt_data %>%
+  filter(!is.na(poli_party)) %>%
+  filter(trial_congruency == "neutral") %>%
+  group_by(gender_link,workerid,trial_gender,poli_party) %>%
+  summarise(meanrt = mean(resid_rt)) %>%
+  ggplot(aes(x=gender_link,y=meanrt,color=trial_gender)) + 
+  geom_point() + 
+  geom_smooth(method='lm') + 
+  scale_color_manual(values = bran_palette, ) + 
+  facet_wrap(~poli_party)
+```
+**Reading Time by Item**
+
+```{r}
+sprt_data %>%
+  group_by(condition,trial_gender,trial_congruency,lexeme) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender,shape=trial_congruency)) + 
+  geom_point(size=3) +
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  facet_wrap(~ lexeme) +
+  theme(axis.text.x = element_text(angle = 45, vjust = .7, hjust=.7)) + 
+  scale_color_manual(values = bran_palette)
+```
+**Whole-Party Means**
+
+```{r}
+sprt_data %>%
+  filter(!is.na(poli_party)) %>%
+  group_by(poli_party,condition,trial_gender,trial_congruency) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender,shape=trial_congruency)) + 
+  geom_point(size=3) +
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  facet_wrap(~ poli_party, nrow = 1) +
+  theme(axis.text.x = element_text(angle = 45, vjust = .7, hjust=.7)) + 
+  scale_color_manual(values = bran_palette)
+```
+
+**Modelling**
+
+```{r}
+sprt_final_dat <- merge(sprt_data,lex_freqs,by="lexeme") %>%
+  mutate(cgender_total = scale(gender_total)) %>%
+  mutate(cage = scale(subject_information.age)) %>%
+  mutate(cmean_left_neutral = scale(mean_left_neutral)) %>%
+  mutate(mean_all = (mean_left_neutral + mean_right_neutral)/2) %>%
+  mutate(cmean_all = scale(mean_all)) %>%
+  mutate(ctrial_congruency = as.numeric(as.factor(trial_congruency))-mean(as.numeric(as.factor(trial_congruency)))) %>%
+  mutate(ctrial_gender = as.numeric(as.factor(trial_gender))-mean(as.numeric(as.factor(trial_gender))))
+```
+
+```{r}
+complex_model <- lmer(resid_rt~ctrial_congruency*cgender_total*poli_party*cmean_all + (1|workerid) + (1|lexeme) + (1|name),data = sprt_final_dat)
+```
+
+```{r}
+summary(complex_model)
+```
 
 ## MAZE-Task Study
 
+### Methods
+
+### Analysis
+
+**Data Read-in**
+
+```{r}
+maze_data <- read.csv('maze_data.csv') %>%
+  filter(trial_id!= 'example') %>%
+  filter(region=='critical')
+```
+
+**Running Exclusion Criteria**
+Now, we want to exclude any participants who failed to answer at least 80% of the attention check questions correctly. We do this by creating a list of all participants who scored less than 80% on these checks, and then cross-referencing this list with all data points, removing any data points whose participants were in the exclusion list. 
+
+```{r}
+maze_exclusion <- maze_data %>% group_by(workerid) %>%
+  summarise(accuracy = mean(response_correct)) %>%
+  mutate(exclude = ifelse(accuracy < 0.80,'Yes','No')) %>% 
+  filter(exclude == 'Yes')
+
+maze_data <- maze_data[!(maze_data$workerid %in% maze_exclusion$workerid),] %>%
+  filter(rt !='null')
+```
+
+```{r}
+maze_data <- maze_data %>%
+  group_by(trial_id) %>%
+  mutate(id_mean = mean(log(rt))) %>%
+  mutate(exclusion = (log(rt) < mean(log(rt)) - 2*sd(log(rt))|(log(rt) > mean(log(rt)) + 2*sd(log(rt))))) %>%
+  ungroup() %>%
+  filter(exclusion==FALSE)
+```
+
+
+**Additional Information**
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(gender_trans = 100 - (rowMeans(maze_data[gender_transcendence_cols]))) %>%
+  mutate(gender_link = rowMeans(maze_data[gender_linked_cols])) 
+
+gender_all = c('gender_trans','gender_link')
+
+maze_data <- maze_data %>%
+  mutate(gender_total = rowMeans(maze_data[gender_all]))
+```
+
+
+### Adding Gender
+<br>
+We also want to add whether the trial included a female or male referent (but also, like, destroy the binary!). In order to do this, we'll just add a <b>trial_gender</b> column that says <i>'female'</i> if the condition was either <i>'neutral_female'</i> or <i>'congruent_female'</i>. Otherwise, we want the <b>trial_gender</b> to say <i>'male'</i>.
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(trial_gender = ifelse(condition=='neutral_female' | condition == 'congruent_female','female','male'))
+
+maze_data %>%
+  select(workerid,rt,condition,trial_id,trial_gender)
+```
+
+### Adding Morphology Type
+<br>
+Now we want to add whether or not the lexeme's neutral form is developed by compounding (as in <i>'congress-person'</i>) or by the adoption of the male form (as in <i>'actor'</i> being used more for both men and women). In this study, we only have six lexemes of the latter type, so we'll just tell R to assign those a <b>morph_type</b> value of <i>'adoption'</i> (for 'male adoption'), and all else will be assigned a value of <i>'compound'</i>.
+
+```{r}
+maze_data <- maze_data%>%
+  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption'))
+
+maze_data %>%
+  select(rt,lexeme,morph_type)
+```
+
+
+### Adding Form Length & Length-Controlled Residuals
+<br>
+Another important factor we want to explore is the length of the critical item! In order to add this, we simply create a new column <b>form_length</b> and tell R to input as that column's value the length of the string that appears in that row's <b>form</b> column, which corresponds to the orthograpic form of the critical item in that trial. <i>Note that this will include spaces in the count!</i>
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(form_length = str_length(form))
+
+simple_model <- lm(log(rt)~form_length, data = maze_data)
+
+maze_data <- maze_data %>%
+  mutate(resid_rt = resid(simple_model))
+```
+
+```{r}
+summary(simple_model)
+```
+
+
+Now that we have these, we can run a simple linear regression which will show us the effect of orthographic length on reading time. Then we add a new column in the data which is the residual reading time, or the reading time in log space AFTER we control for the effects of orthographic length.
+
+### Adding Congruency Column
+<br>
+We also want to make sure we have a column which records whether or not the trial was gender-congruent (as in <i>'Shelby is a congresswoman'</i>) or gender neutral (as in <i>'Shelby is a congressperson'</i>). We add a <b>trial_congruency</b> column, which is valued as <i>'congruent'</i> if that row's condition is one of the two congruent conditions. Otherwise, it gets valued as <i>'neutral'</i>.
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(trial_congruency = ifelse(condition=='congruent_male' | condition == 'congruent_female','congruent','neutral'))
+```
+
+### Adding Large Political Macrocategories
+<br>
+Finally, we can classify participants by their particular political alignment; we can construe this broadly as "Republicans" vs. "Democrats", with those who declined to state a preference, or placed themselves in the middle, as "Non-Partisan".
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(poli_party = ifelse(subject_information.party_alignment == 1 | subject_information.party_alignment == 2,'Republican',ifelse(subject_information.party_alignment == 4 | subject_information.party_alignment == 5,'Democrat','Non-Partisan')))
+```
+
+**Visualisations**
+
+```{r}
+ggplot(maze_data, aes(x=gender_total, y=resid_rt, color=trial_congruency)) + 
+  geom_point(alpha=.5) + 
+  geom_smooth(method = 'lm', size=1.2) + 
+  theme_minimal()
+```
+
+**Reading Time by Congruency & Gender**
+
+```{r}
+maze_speaker_means <- maze_data %>%
+  group_by(condition,workerid) %>%
+  summarize(MeanRT=mean(resid_rt))
+```
+
+```{r}
+maze_data %>%
+  group_by(condition,trial_gender) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender)) + 
+  geom_point(size=3) + 
+  geom_jitter(data = maze_speaker_means, aes(y=MeanRT),alpha=.1,color='darkred') + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  scale_color_manual(values = bran_palette) + 
+  theme_minimal()
+```
+
+**Item Means**
+
+```{r}
+maze_data %>%
+  group_by(condition,trial_gender,trial_congruency,lexeme) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender,shape=trial_congruency)) + 
+  geom_point(size=3) +
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  facet_wrap(~ lexeme) +
+  theme(axis.text.x = element_text(angle = 45, vjust = .7, hjust=.7)) + 
+  scale_color_manual(values = bran_palette) + 
+  facet_wrap(~lexeme)
+```
+
+**Morphological Type and Gender**
+
+```{r}
+maze_data %>%
+  group_by(condition,trial_gender,morph_type) %>%
+  summarize(MeanRT = mean(resid_rt), CI.Low = ci.low(resid_rt), CI.High = ci.high(resid_rt)) %>%
+  mutate(YMin = MeanRT - CI.Low, YMax = MeanRT + CI.High) %>%
+  ggplot(aes(x=condition,y=MeanRT,color=trial_gender)) + 
+  geom_point(size=3) + 
+  geom_errorbar(aes(ymin=YMin,ymax=YMax), width=.25) + 
+  scale_color_manual(values = bran_palette) + 
+  facet_wrap(~morph_type) + 
+  theme(axis.text.x = element_text(angle=45, vjust = 0.5))
+```
+
+
+**Model**
+
+```{r}
+maze_data <- maze_data %>%
+  mutate(ctrial_congruency = as.numeric(as.factor(trial_congruency))-mean(as.numeric(as.factor(trial_congruency)))) %>%
+  mutate(ctrial_gender = as.numeric(as.factor(trial_gender))-mean(as.numeric(as.factor(trial_gender)))) %>%
+  mutate(cgender_link = scale(gender_link)) %>%
+  mutate(cgender_total = scale(gender_total)) %>%
+  mutate(cmorph_type = as.numeric(as.factor(morph_type))-mean(as.numeric(as.factor(morph_type)))) %>%
+  mutate(cgender = as.numeric(as.factor(subject_information.gender))-mean(as.numeric(as.factor(subject_information.gender))))
+```
+
+```{r}
+complex_model <- lmer(resid_rt~ctrial_congruency*ctrial_gender*cgender_total + (1|workerid) + (1|lexeme),data = maze_data)
+```
+
+```{r}
+summary(complex_model)
+```
+
 ## Production Task Study
 
+### Methods
 
+### Analysis
+
+**Data Read-in**
+
+```{r}
+prod_data <- read.csv("production_data.csv")
+```
+
+**Exclusions**
+
+```{r}
+exclusion <- prod_data %>% filter(name=='attention') %>%
+  group_by(workerid) %>%
+  summarise(accuracy = mean(correct)) %>%
+  mutate(exclude = ifelse(accuracy < 0.80,'Yes','No')) %>%
+  filter(exclude == "Yes")
+```
+
+```{r}
+prod_data <- prod_data[!(prod_data$workerid %in% exclusion$workerid),]
+```
+
+**Additional Information** 
+
+```{r}
+prod_data <- prod_data %>%
+  mutate(gender_trans = 100 - (rowMeans(prod_data[gender_transcendence_cols]))) %>%
+  mutate(gender_link = rowMeans(prod_data[gender_linked_cols])) 
+
+gender_all = c('gender_trans','gender_link')
+
+prod_data <- prod_data %>%
+  mutate(gender_total = rowMeans(prod_data[gender_all]))
+``` 
+
+```{r}
+prod_data <- prod_data %>%
+  filter(type == "critical") %>%
+  mutate(response_gender = ifelse(response == "actress" | response == "anchorwoman" | response == "stewardess" | response == "businesswoman" | response == 'camerawoman' | response == 'congresswoman' | response == 'craftswoman' | response == 'crewwoman' | response == 'firewoman' | response == 'forewoman'  | response == 'heiress' | response == 'heroine' | response == 'hostess' | response == 'huntress' | response == 'laywoman' | response == 'policewoman' | response == 'saleswoman' | response == 'stuntwoman' | response == 'villainess' | response == 'weatherwoman',"female",ifelse(response == "anchor" | response == "flight attendant" | response == "businessperson" | response == 'camera operator' | response == 'congressperson' | response == 'craftsperson' | response == 'crewmember' | response == 'firefighter' | response == 'foreperson' | response == 'layperson' | response == 'police officer' | response == 'salesperson' | response == 'stunt double' | response == 'meteorologist',"neutral",ifelse(response == "anchorman" | response == "steward" | response == "businessman" | response == 'cameraman' | response == 'congressman' | response == 'craftsman' | response == 'crewman' | response == 'fireman' | response == 'foreman' | response == 'layman' | response == 'policeman' | response == 'salesman' | response == 'stuntman' | response == 'weatherman',"male",'male/neutral')))) %>%
+  mutate(congruency = ifelse(gender == response_gender,"true","false")) %>%
+  mutate(neutrality = ifelse(response_gender == "neutral","true","false"))%>%
+  mutate(morph_type = ifelse(lexeme!= 'actor' & lexeme!= 'host' & lexeme !='hunter' & lexeme!= 'villain' & lexeme!= 'heir' & lexeme!= 'hero','compound','adoption')) %>%
+  mutate(poli_party = ifelse(subject_information.party_alignment == 1 | subject_information.party_alignment == 2,'Republican',ifelse(subject_information.party_alignment == 4 | subject_information.party_alignment == 5,'Democrat','Non-Partisan')))
+```
+
+**Responses by Political Ideology**
+
+```{r}
+prod_data %>% 
+  filter(!is.na(poli_party)) %>%
+  filter(morph_type =="compound") %>%
+  ggplot(aes(x=poli_party, fill=response_gender)) + 
+  geom_bar(position="fill") + 
+  facet_wrap(~gender) + 
+  scale_fill_manual(values = bran_palette) + 
+  labs(x="Participant Political Party", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name")
+```
+
+```{r}
+prod_data %>% 
+  filter(!is.na(subject_information.party_alignment)) %>%
+  filter(morph_type =="compound") %>%
+  ggplot(aes(x=subject_information.party_alignment, fill=response_gender)) + 
+  geom_bar(position="fill") + 
+  facet_wrap(~gender) + 
+  scale_fill_manual(values = bran_palette) + 
+  labs(x="Participant Political Party", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name")
+```
+
+**Gender of Response by Political Alignment and Gender Ideology**
+
+```{r}
+prod_data %>%
+  filter(!is.na(poli_party)) %>%
+  mutate(response_neutral = ifelse(response_gender == "neutral",1,0)) %>%
+  filter(gender!="filler" & gender!= "attention" & gender!="") %>%
+  group_by(gender,gender_total,poli_party) %>%
+  summarise(proportion = mean(response_neutral)) %>%
+  ggplot(aes(x=gender_total, y=proportion, color=gender)) +
+    geom_point() + 
+    geom_smooth() + 
+    scale_color_manual(values = bran_palette) +
+    facet_wrap(~poli_party)
+```
+
+**Gender by Gender, no Ideology**
+
+```{r}
+prod_data %>%
+  filter(morph_type =="compound") %>%
+  ggplot(aes(x=gender, fill=response_gender)) + 
+  geom_bar(position="fill") + 
+  scale_fill_manual(values = bran_palette) + 
+  labs(x="Stimulus Gender", fill="Gender of Response", y="Proportion of Responses", title="Gender of Response by Gender of Stimulus Name") +
+  theme_minimal()
+```
+
+**Models**
+
+```{r}
+prod_data_compounds <- prod_data %>%
+  filter(morph_type == "compound") %>%
+  mutate(cgender_total = scale(gender_total)) %>%
+  mutate(response_congruency = as.numeric(ifelse(congruency=="true","1","0"))) %>%
+  mutate(cage = scale(subject_information.age)) %>%
+  mutate(neutrality_binary = ifelse(neutrality=="true",1,0))
+```
+
+```{r}
+final_dat <- merge(prod_data_compounds,lex_freqs,by="lexeme") %>%
+  mutate(neutrality_binary = ifelse(neutrality=="true",1,0)) %>%
+  filter(morph_type == "compound") %>%
+  mutate(cgender_total = scale(gender_total)) %>%
+  mutate(response_congruency = as.numeric(ifelse(congruency=="true","1","0"))) %>%
+  mutate(cage = scale(subject_information.age)) %>%
+  mutate(cmean_left_neutral = scale(mean_left_neutral)) %>%
+  mutate(mean_all = (mean_left_neutral + mean_right_neutral)/2) %>%
+  mutate(cmean_all = scale(mean_all))
+```
+
+```{r}
+production_model_one <- lmer(neutrality_binary~cgender_total + poli_party + gender + cmean_all + (1|workerid) + (1|lexeme) + (1|name),data=final_dat)
+```
+
+```{r}
+summary(production_model_one)
+```
